Added z-index to the sidebar

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,13 @@ body {
 .sidebar-responsive {
   display: inline !important;
   position: absolute;
+  /*
+    the z-index of the ApexCharts is 11
+    we want the z-index of the sidebar higher so that
+    the charts are not showing over the sidebar 
+    on small screens
+  */
+  z-index: 12 !important;
 }
 
 
